[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/runtime",
  "crates/operators",
  "bin/mini-runner",
  "bin/jobmanager",
  "bin/worker",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
