[package]
name = "bicycle-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bicycle-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
