[package]
name = "bicycle-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
bincode.workspace = true
parking_lot.workspace = true

bicycle-core = { path = "../core" }
