[package]
name = "bicycle-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bicycle-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes = { workspace = true, features = ["serde"] }