[package]
name = "wordcount-kafka"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Enhanced word count with Kafka pipeline: socket -> kafka -> wordcount -> kafka -> socket"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "wordcount-kafka"
path = "src/main.rs"

[dependencies]
bicycle-api = { path = "../../crates/api" }
bicycle-plugin = { path = "../../crates/plugin" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
